minor spacing fixes

--- a/betHome.css
+++ b/betHome.css
@@ -153,7 +153,7 @@ body:is(.edit-mode) #editToggle {
 .modalItem {
     display: block;
     position: relative;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 /* setting items */
@@ -181,7 +181,7 @@ body:is(.edit-mode) #editToggle {
     font-size: 30px;
     display: block;
     position: relative;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 /* background video list */
@@ -241,7 +241,8 @@ body:is(.edit-mode) #editToggle {
 #upLoad {
     font-weight: 400;
     width: 70px;
-    border: 1px dashed magenta;
+    /* border-radius: 3px;
+    background-color: rgba(80, 80, 80, 0.6); */
 }
 
 #upLoad:hover {
